--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Books shelf</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,700;1,9..40,400&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./style/index.css" />
+
+</head>
+
+<body>
+  <include src="./partials/header.html"></include>
+  <main class="container">
+    <div class="sidebar">
+      <include src="./partials/allcategories.html"></include>
+      <include src="./partials/support.html"></include>
+    </div>
+    <include src="./partials/main.html"></include>
+  </main>
+
+  <include src="./partials/modal.html"></include>
+
+  <script type="module" src="./index.js"></script>
+
+</body>
+
 </html>
