--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Books shelf</title>
+  <link rel="icon" type="svg" href="./images/sprite.svg#logotype">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -17,10 +18,10 @@
 <body>
   <include src="./partials/header.html"></include>
   <main class="container">
-    <div class="sidebar">
+    <aside class="sidebar">
       <include src="./partials/allcategories.html"></include>
       <include src="./partials/support.html"></include>
-    </div>
+    </aside>
     <include src="./partials/main.html"></include>
   </main>
 
