--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping list</title>
+    <link rel="icon" type="svg" href="./images/sprite.svg#logotype">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -19,8 +20,8 @@
     <main class="container">
         <include src="./partials/support.html"></include>
         <include src="./partials/main.html"></include>
+        <include src="./partials/plug.html"></include>
     </main>
-    <include src="./partials/plug.html"></include>
     <include src="./partials/modal.html"></include>
 
     <script type="module" src="./index.js"></script>
