--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   <include src="./partials/modal.html"></include>
 
   <script type="module" src="./index.js"></script>
-
+<a href="./login.html">LOGIN</a>
 </body>
 
 </html>
