Revert "finish login html, css + media"
This reverts commit 8748073810ad7309d2470efef2a9ec63addb5cfe.

--- a/src/login.html
+++ b/src/login.html
@@ -17,7 +17,7 @@
     <div class="backdrop">
       <div class="login-modal">
         <button class="login-btn" type="button" data-login-close>
-          <svg class="login-btn-icon" width="20" height="20">
+          <svg class="login-btn-icon" width="28" height="28">
             <use href="./images/sprite.svg#icon-x-close"></use>
           </svg>
         </button>
@@ -42,7 +42,7 @@
               required
               placeholder="email"
             />
-            <svg class="login-field-icon" width="18" height="18">
+            <svg class="login-field-icon" width="28" height="28">
               <use href="./images/sprite.svg#mail"></use>
             </svg>
           </div>
@@ -55,7 +55,13 @@
               required
               placeholder="password"
             />
-            <svg class="login-field-icon" width="18" height="18">
+            <svg
+              fill="transparent"
+              stroke="black"
+              class="login-field-icon"
+              width="28"
+              height="28"
+            >
               <use href="./images/sprite.svg#lock"></use>
             </svg>
           </div>
