--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <include src="./partials/main.html"></include>
   </main>
 
+  <include src="./partials/mobile-menu.html"></include>
   <include src="./partials/modal.html"></include>
 
   <script type="module" src="./index.js"></script>
