--- a/src/login.html
+++ b/src/login.html
@@ -14,14 +14,19 @@
   </head>
 
   <body>
-    <button class="login-open js-login-open">Open Login</button>
-    <div class="backdrop js-backdrop is-hidden">
+    <div class="backdrop js-backdrop">
       <div class="login-modal">
-        <button class="login-btn js-login-btn" type="button" data-login-close>
-          <svg class="login-btn-icon" width="20" height="20">
-            <use href="./images/sprite.svg#icon-x-close"></use>
-          </svg>
-        </button>
+        <a href="./index.html" class="login-link-btn"
+          ><button
+            class="login-btn js-login-btn"
+            type="button"
+            data-login-close
+          >
+            <svg class="login-btn-icon" width="20" height="20">
+              <use href="./images/sprite.svg#icon-x-close"></use>
+            </svg>
+          </button>
+        </a>
         <form class="login-form js-login-form">
           <div class="login-field">
             <input
@@ -72,7 +77,8 @@
         </form>
       </div>
     </div>
-    <script type="module" src="./js/login-js.js"></script>
+    <!-- <script type="module" src="./js/login/fire-base.js"></script> -->
+    <!-- <script type="module" src="./js/login-js.js"></script> -->
     <script type="module" src="./index.js"></script>
   </body>
 </html>
