--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Books shelf</title>
+    <link rel="icon" type="svg" href="./images/sprite.svg#logotype" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,700;1,9..40,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style/index.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Books shelf</title>
-  <link rel="icon" type="svg" href="./images/sprite.svg#logotype">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,700;1,9..40,400&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="./style/index.css" />
+  <body>
+    <include src="./partials/header.html"></include>
+    <main class="container">
+      <aside class="sidebar">
+        <include src="./partials/allcategories.html"></include>
+        <include src="./partials/support.html"></include>
+      </aside>
+      <include src="./partials/main.html"></include>
+    </main>
 
-</head>
+    <include src="./partials/modal.html"></include>
 
-<body>
-  <include src="./partials/header.html"></include>
-  <main class="container">
-    <aside class="sidebar">
-      <include src="./partials/allcategories.html"></include>
-      <include src="./partials/support.html"></include>
-    </aside>
-    <include src="./partials/main.html"></include>
-  </main>
-
-  <include src="./partials/modal.html"></include>
-
-  <script type="module" src="./index.js"></script>
-</body>
-
+    <script type="module" src="./index.js"></script>
+  </body>
 </html>
