--- a/src/login.html
+++ b/src/login.html
@@ -22,45 +22,49 @@
           </svg>
         </button>
         <form class="login-form js-login-form">
-          <div class="login-field" id="login-field-name">
-            <input
-              class="login-field-input"
-              type="text"
-              name="user_name"
-              id="user_name"
-              minlength="3"
-              placeholder="Name"
-            />
-            <span class="modal-error-message">Enter minimum 3 symbols</span>
-          </div>
-          <div class="login-field">
-            <input
-              class="login-field-input"
-              type="email"
-              name="user_email"
-              id="user_email"
-              required
-              placeholder="email"
-            />
-            <span class="modal-error-message">Enter valid e-mail with '@'</span>
-            <svg class="login-field-icon" width="18" height="18">
-              <use href="./images/sprite.svg#mail"></use>
-            </svg>
-          </div>
-          <div class="login-field">
-            <input
-              class="login-field-input"
-              type="password"
-              name="user_password"
-              id="user_password"
-              required
-              placeholder="password"
-              minlength="8"
-            />
-            <span class="modal-error-message">Enter minimum 8 symbols</span>
-            <svg class="login-field-icon" width="18" height="18">
-              <use href="./images/sprite.svg#lock"></use>
-            </svg>
+          <div class="login-field-container">
+            <div class="login-field" id="login-field-name">
+              <input
+                class="login-field-input"
+                type="text"
+                name="user_name"
+                id="user_name"
+                minlength="3"
+                placeholder="Name"
+              />
+              <span class="modal-error-message">Enter minimum 3 symbols</span>
+            </div>
+            <div class="login-field">
+              <input
+                class="login-field-input"
+                type="email"
+                name="user_email"
+                id="user_email"
+                required
+                placeholder="email"
+              />
+              <span class="modal-error-message"
+                >Enter valid e-mail with '@'</span
+              >
+              <svg class="login-field-icon" width="18" height="18">
+                <use href="./images/sprite.svg#mail"></use>
+              </svg>
+            </div>
+            <div class="login-field">
+              <input
+                class="login-field-input"
+                type="password"
+                name="user_password"
+                id="user_password"
+                required
+                placeholder="password"
+                minlength="8"
+              />
+              <span class="modal-error-message">Enter minimum 8 symbols</span>
+              <svg class="login-field-icon" width="18" height="18">
+                <use href="./images/sprite.svg#lock"></use>
+              </svg>
+            </div>
           </div>
           <button class="login-submit-btn" type="submit">Sign up</button>
           <div class="login-sign">
