--- a/src/login.html
+++ b/src/login.html
@@ -74,6 +74,7 @@
         </form>
       </div>
     </div>
+    <button class="login-logout">logout</button>
     <!-- <script defer type="module" src="./js/login/firebase.js"></script> -->
     <script type="module" src="./js/login.js"></script>
     <!-- <script type="module" src="./index.js"></script> -->
