update firebase, create displayName and urlPhoto

--- a/src/login.html
+++ b/src/login.html
@@ -30,6 +30,7 @@
                 name="user_name"
                 id="user_name"
                 minlength="3"
+                required
                 placeholder="Name"
               />
               <span class="modal-error-message">Enter minimum 3 symbols</span>
