--- a/src/login.html
+++ b/src/login.html
@@ -45,7 +45,7 @@
                 placeholder="email"
               />
               <span class="modal-error-message"
-                >Enter valid e-mail with '@'</span
+                >Enter valid e-mail, example: ivan@email.com</span
               >
               <svg class="login-field-icon" width="18" height="18">
                 <use href="./images/sprite.svg#mail"></use>
@@ -75,7 +75,6 @@
         </form>
       </div>
     </div>
-    <button class="login-logout">logout</button>
     <!-- <script defer type="module" src="./js/login/firebase.js"></script> -->
     <script type="module" src="./js/login.js"></script>
     <!-- <script type="module" src="./index.js"></script> -->
