dark mode added login and shoppinglist

--- a/src/login.html
+++ b/src/login.html
@@ -76,6 +76,7 @@
       </div>
     </div>
     <!-- <script defer type="module" src="./js/login/firebase.js"></script> -->
+    <script type="module" src="./js/login-darkmode.js"></script>
     <script type="module" src="./js/login.js"></script>
     <!-- <script type="module" src="./index.js"></script> -->
   </body>
