--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -22,7 +22,7 @@
       <include src="./partials/plug.html"></include>
     </main>
     <include src="./partials/modal.html"></include>
-
+    <script type="module" src="./js/shoppinglist-darkmode.js"></script>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
