--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -21,7 +21,10 @@
     <include src="./partials/clock.html"></include>
     <include src="./partials/plug.html"></include>
   </main>
+  <include src="./partials/mobile-menu.html"></include>
   <include src="./partials/modal.html"></include>
+  <script type="module" src="./js/login/logout.js"></script>
+
   <script type="module" src="./js/shoppinglist-darkmode.js"></script>
   <script type="module" src="./index.js"></script>
 </body>
