--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shopping list</title>
-  <link rel="icon" type="svg" href="./images/sprite.svg#logotype" />
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
