--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -17,8 +17,10 @@
 <body>
   <include src="./partials/header.html"></include>
   <main class="container">
-    <include src="./partials/support.html"></include>
-    <include src="./partials/clock.html"></include>
+    <aside class="sidebar">
+      <include src="./partials/support.html"></include>
+      <include src="./partials/clock.html"></include>
+    </aside>
     <include src="./partials/plug.html"></include>
   </main>
   <include src="./partials/mobile-menu.html"></include>
