--- a/src/login.html
+++ b/src/login.html
@@ -54,10 +54,8 @@
       </form>
     </div>
   </div>
-  <!-- <script defer type="module" src="./js/login/firebase.js"></script> -->
-  <script type="module" src="./js/login-darkmode.js"></script>
-  <script type="module" src="./js/login.js"></script>
-  <!-- <script type="module" src="./index.js"></script> -->
+
+  <script type="module" src="./login.js"></script>
 </body>
 
 </html>
