--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -25,10 +25,8 @@
   </main>
   <include src="./partials/mobile-menu.html"></include>
   <include src="./partials/modal.html"></include>
-  <script type="module" src="./js/login/logout.js"></script>
 
-  <script type="module" src="./js/shoppinglist-darkmode.js"></script>
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./shopinglist.js"></script>
 </body>
 
 </html>
