--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,700;1,9..40,400&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="./style/index.css" />
+  <link rel="stylesheet" href="./style/layout/login.css" />
 </head>
 
 <body>
