Smooth scroll add

--- a/src/shoppinglist.html
+++ b/src/shoppinglist.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content=" Find a wide selection of books in our book library. Discover new authors, genres and stories.">
+  </meta>
+  <meta name="keywords" content=" book library, books, authors, genres, reading">
+  </meta>
   <title>Shopping list</title>
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,700;1,9..40,400&display=swap"
-    rel="stylesheet" />
   <link rel="stylesheet" href="./style/index.css" />
 </head>
 
